# telegram_parser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
parse_telegram/: __main__.py  new_message_handler.py
parse_telegram/match/: find_match.py  get_match_values.py  headers.py
parse_telegram/telegram/: check_env.py  connect.py  print_dialogs.py
parse_telegram/utils/: check_scores.py  get_values.py
tests/utils/: is_equal_scores_test.py
